# nordlicht

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE.md  README.md  Vagrantfile  audio.c  audio.h  cheat.h  error.c  graphics.c  graphics.h  image.c  image.h  main.c  mediabarcode.pc  mediabarcode.pc.in  mediastrip.pc.in  nordlicht.1  nordlicht.c  nordlicht.h  source.c  source.h  test.c  testsuite.c  vidcode.c  vidcode.h  video.c  video.h
cmake/: FindFFmpeg.cmake  FindFreeImage.cmake  FindPopt.cmake  download_testfile.cmake  nordlicht.pc.in
debian/: changelog  control  copyright  gbp.conf  libnordlicht-dev.install  libnordlicht0.install  nordlicht.install  nordlicht.manpages  rules
debian/patches/: cmake-add-soversion  remove-tests  series
examples/: nordlicht-example.c
include/: mediabarcode.h
prototype1-shell/: video-barcode
prototype2-c/: .gitignore  Makefile  main.c  video-barcode.c  video-barcode.h
prototype3-c-lib/: CMakeLists.txt  main.c  vidcode.c  vidcode.h
res/: bootstrap-debian.sh  mediabarcode.pc.in  mpv-nordlicht  nordlicht.pc.in
src/: cheat.h  common.c  common.h  error.c  error.h  ffmpeg.h  frame.c  frame.h  graphics.c  graphics.h  image.c  image.h  main.c  mediabarcode-bin.c  mediabarcode.c  mediabarcode.h  mediastrip-bin.c  mediastrip.c  mediastrip.h  nordlicht-tool.c  nordlicht.c  nordlicht.h  nordlicht2.c  source.c  source.h  test.c  testsuite.c  tool.c  version.h.in  video.c  video.h
test/: test-bin.sh  test-tool.sh  test.c  tool.sh
tests/: library.c  tool.sh
utils/: bootstrap-debian.sh  ffplay-nordlicht  mpv-nordlicht  mpv-nordlicht.lua  nordlicht.thumbnailer  youtube-nordlicht
